--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -14,7 +14,8 @@
 		"eamodio.gitlens",
 		"burkeholland.simple-react-snippets",
 		"ms-vsliveshare.vsliveshare",
-		"ms-vsliveshare.vsliveshare-audio"
+		"ms-vsliveshare.vsliveshare-audio",
+		"github.vscode-pull-request-github"
 	],
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	"forwardPorts": [
@@ -31,6 +32,7 @@
 	// Uncomment to connect as a non-root user. See https://aka.ms/vscode-remote/containers/non-root.
 	// "remoteUser": "node"
 }
+
 
 
 
