--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/styles": "^4.10.0",
     "@react-google-maps/api": "^1.9.7",
+    "@react-native-community/geolocation": "^2.0.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -16,6 +17,7 @@
     "react": "^16.13.1",
     "react-alert-template-mui": "^1.0.7",
     "react-dom": "^16.13.1",
+    "react-geocode": "^0.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
